--- a/md_dbdocs.app/Views/ConfigView.xaml
+++ b/md_dbdocs.app/Views/ConfigView.xaml
@@ -11,7 +11,7 @@
     <d:UserControl.DataContext>
         <ViewModels:ConfigViewModel>
             <ViewModels:ConfigViewModel.Config>
-                <Models:ConfigModel DataBase="MyDb" Server="MyServer" SqlPassword="MySqlPass" SqlProjectRootPath="MySqlRootPath" SqlUserName="MySqlUserName" MarkdownIncludeConfigFilePath="MdInclude File Path"/>
+                <Models:ConfigModel DataBase="MyDb" Server="MyServer" SqlPassword="MySqlPass" SqlProjectRootPath="MySqlRootPath" SqlUserName="MySqlUserName"/>
             </ViewModels:ConfigViewModel.Config>
         </ViewModels:ConfigViewModel>
     </d:UserControl.DataContext>
@@ -59,18 +59,6 @@
         <TextBlock Grid.Row="5" Grid.Column="1" TextAlignment="Right" Text="SQL Password: " IsEnabled="{Binding Config.UseSqlLogin}" Visibility="{Binding Config.UseSqlLogin, Converter={StaticResource BoolToVisibilityConverter}}" Margin="0 5 2 5"/>
         <TextBox   Grid.Row="5" Grid.Column="2" TextAlignment="Left" Text="{Binding Config.SqlPassword}" d:Text="My SQL Password" InputScope="Password" IsEnabled="{Binding Config.UseSqlLogin}" Visibility="{Binding Config.UseSqlLogin, Converter={StaticResource BoolToVisibilityConverter}}" Margin="0 5 2 5"/>
 
-        <TextBlock Grid.Row="6" Grid.Column="1" TextAlignment="Right" Text="Markdown-include config file: " Margin="0 5 2 5"/>
-        <TextBlock Grid.Row="6" Grid.Column="2" Text="{Binding Config.MarkdownIncludeConfigFilePath}" TextWrapping="Wrap" MaxWidth="300" Margin="0 5 2 5"/>
-        <Grid      Grid.Row="6" Grid.Column="3">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <Button Grid.Row="1"    Content="Browse" MaxWidth="100" HorizontalAlignment="Left"/>
-        </Grid>
-
-
         <TextBlock Grid.Row="7" Grid.Column="1" TextAlignment="Right" Text="SQL Project Root Folder: " Margin="0 5 2 5"/>
         <TextBlock Grid.Row="7" Grid.Column="2" Text="{Binding Config.SqlProjectRootPath}" Margin="0 5 2 5"/>
         <Grid      Grid.Row="7" Grid.Column="3">
@@ -79,7 +67,7 @@
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Button Grid.Row="1" Content="Browse" MaxWidth="100" HorizontalAlignment="Left"/>
+            <Button Grid.Row="1" Content="Browse" MaxWidth="100" HorizontalAlignment="Left" Command="{Binding BrowseCommand}"/>
         </Grid>
 
         <Button Grid.Row="8" Grid.Column="1" Grid.ColumnSpan="3" Margin="10" Content="Validate configuration" Command="{Binding ValidateCommand}"/>
